--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,6 @@ body {
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: url("./assets/background-icon.svg") no-repeat hsla(221, 39%, 11%, 1);
+    background: url("./assets/background-icon.svg") no-repeat fixed left bottom hsla(221, 39%, 11%, 1);
     color: #fff;
 }
